feat: logout completed
